Refactor and optimize Snake package